# email2markdown.app

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release.yml
assets/: config_window.html  destinations_window.html  notes_review.html  progress_window.html  route_review.html  sort_review.html  update_window.html
config/: settings.yaml.example
docs/memory-bank/: module_structure.md
src/: cleaner.rs  config.rs  dest_cmd.rs  destinations.rs  email_export.rs  fix_yaml.rs  lib.rs  main.rs  network.rs  notes_review.rs  progress.rs  route.rs  sort_emails.rs  summarize.rs  thunderbird.rs  tray.rs  tray_actions.rs  tray_config_window.rs  tray_progress_window.rs  tray_sort_window.rs  updater.rs  utils.rs
tests/: rust_tests.rs
tools/: README.md  requirements.txt  setup.py
tools/config/: config.yaml  config.yaml.example
tools/data/: corpus.jsonl  known_classes.json  model.pkl  vectorizer.pkl
tools/scripts/: apply_template.py  classify.py  deduplicate_labels.py  group_notes.py  reorganize.py  summarize.py  validate_format.py
tools/src/: age.py  archiver.py  categorizer.py  config.py  deduplicator.py  folder_classifier.py  grouper.py  llm.py  parser.py
tools/src/summarizers/: associatif.py  filename.py  newsletter.py  notification.py  travail.py
tools/templates/: activity.md  contact_list.md  meeting_recap.md  sent_digest.md
tools/tests/: test_folder_classifier_coldstart.py
