[package]
name = "email-to-markdown"
version = "0.15.1"
edition = "2021"
authors = ["FX Guillois"]
repository = "https://github.com/fxguillois/email-to-markdown"
description = "Export emails from IMAP accounts to Markdown files with YAML frontmatter"
license = "MIT"
keywords = ["email", "imap", "markdown", "export"]
categories = ["command-line-utilities"]

[dependencies]
# IMAP client
imap = "3.0.0-alpha.15"
imap-proto = "0.16"
native-tls = "0.2"

# Email parsing
mailparse = "0.14"

# YAML handling
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Regex for text processing
regex = "1.10"

# Date and time handling
chrono = { version = "0.4", features = ["serde"] }

# File system utilities
walkdir = "2.4"
glob = "0.3"

# Environment variables and configuration
dotenvy = "0.15"

# Command line argument parsing
clap = { version = "4.4", features = ["derive"] }

# Hash functions
md5 = "0.7"

# Character encoding
encoding_rs = "0.8"

# HTML entity decoding (for cleaner pipeline)
html-escape = "0.2"

# HTML-to-Markdown conversion (for emails with no text/plain part)
htmd = "0"

# URL parsing and validation (for cleaner pipeline)
url = "2.5"

# CSV support
csv = "1.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# HTTP client for update checks (tray only — not needed in CLI mode)
ureq = { version = "2", features = ["json"], optional = true }

# In-place binary self-replacement (for auto-update, tray only)
self-replace = { version = "1", optional = true }

# Temporary files (used by updater for atomic binary download)
tempfile = "3"

# Semver version comparison (tiny pure-Rust, unconditional)
semver = "1"

# Dynamic library loading (for NSS/Thunderbird password extraction)
libloading = "0.8"

# Base64 decoding (for Thunderbird encrypted passwords)
base64 = "0.22"

# System tray (optional)
tray-icon = { version = "0.19", optional = true }
tao = { version = "0.30", optional = true }
wry = { version = "0.44", optional = true }
rfd = { version = "0.15", optional = true }

# Move emails to trash
trash = "3"

# Open files with default application
open = "5.3"

# Platform-appropriate config/data directories
dirs = "5.0"

# Image handling for tray icon
image = { version = "0.25", optional = true }

[features]
default = []
tray = ["tray-icon", "tao", "wry", "rfd", "image", "dep:ureq", "dep:self-replace"]

[dev-dependencies]

[[bin]]
name = "email-to-markdown"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
